GOT IT FUCKING WORKINGgit add --all!

--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,7 +4,7 @@
 		<title>Example app</title>
 		<link rel="stylesheet" type="text/css" href="__res__/bower/bootstrap-css/css/bootstrap.min.css" />
 	</head>
-	<body>
+	<body id="mount">
 		<%- reactContent %>
 	</body>
 	<script src="__res__/client/main.bundle.js"></script>
