Added component example

--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,8 +4,8 @@
 		<title>Example app</title>
 		<link rel="stylesheet" type="text/css" href="__res__/bower/bootstrap-css/css/bootstrap.min.css" />
 	</head>
-	<body id="mount">
-		<%- reactContent %>
+	<body id="main">
+		<%- mainContent %>
 	</body>
 	<script src="__res__/client/main.bundle.js"></script>
 </html>
